; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-win-crash-handler.c_exception_handler_data_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-win-crash-handler.c_exception_handler_data_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.exception_handler_data = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.exception_handler_data*)* @exception_handler_data_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exception_handler_data_free(%struct.exception_handler_data* %0) #0 {
  %2 = alloca %struct.exception_handler_data*, align 8
  store %struct.exception_handler_data* %0, %struct.exception_handler_data** %2, align 8
  %3 = load %struct.exception_handler_data*, %struct.exception_handler_data** %2, align 8
  %4 = getelementptr inbounds %struct.exception_handler_data, %struct.exception_handler_data* %3, i32 0, i32 5
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @LocalFree(i32 %5)
  %7 = load %struct.exception_handler_data*, %struct.exception_handler_data** %2, align 8
  %8 = getelementptr inbounds %struct.exception_handler_data, %struct.exception_handler_data* %7, i32 0, i32 4
  %9 = call i32 @dstr_free(i32* %8)
  %10 = load %struct.exception_handler_data*, %struct.exception_handler_data** %2, align 8
  %11 = getelementptr inbounds %struct.exception_handler_data, %struct.exception_handler_data* %10, i32 0, i32 3
  %12 = call i32 @dstr_free(i32* %11)
  %13 = load %struct.exception_handler_data*, %struct.exception_handler_data** %2, align 8
  %14 = getelementptr inbounds %struct.exception_handler_data, %struct.exception_handler_data* %13, i32 0, i32 2
  %15 = call i32 @dstr_free(i32* %14)
  %16 = load %struct.exception_handler_data*, %struct.exception_handler_data** %2, align 8
  %17 = getelementptr inbounds %struct.exception_handler_data, %struct.exception_handler_data* %16, i32 0, i32 1
  %18 = call i32 @dstr_free(i32* %17)
  %19 = load %struct.exception_handler_data*, %struct.exception_handler_data** %2, align 8
  %20 = getelementptr inbounds %struct.exception_handler_data, %struct.exception_handler_data* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @FreeLibrary(i32 %21)
  ret void
}

declare dso_local i32 @LocalFree(i32) #1

declare dso_local i32 @dstr_free(i32*) #1

declare dso_local i32 @FreeLibrary(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
